fixing padding on mobile submenu

--- a/src/components/menu/_menu.scss
+++ b/src/components/menu/_menu.scss
@@ -163,7 +163,7 @@
   background-color: $white;
   &__item {
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 1.5rem 2rem;
     z-index: 10;
     margin: 0;
     .nav__menu-link {
